Fix scrollbar issue

--- a/public/resources/css/styling.css
+++ b/public/resources/css/styling.css
@@ -1,8 +1,5 @@
 * {
     font-family: 'Ubuntu', 'Titillium Web', sans-serif;
-}
-
-html {
     overflow-x: hidden;
     overflow-y: hidden;
 }
@@ -64,7 +61,6 @@ body {
     width: 100%;
     text-align: center;
     text-justify: center;
-    /* width: 10%; */
     padding: 40px;
 }
 
